--- a/css/main.css
+++ b/css/main.css
@@ -1239,7 +1239,7 @@ a:hover, a:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding-bottom: 60px;
+    margin-bottom: 60px;
   }
 }
 
@@ -1306,7 +1306,7 @@ a:hover, a:focus {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -8px;
   display: block;
   width: 100%;
   height: 4px;
@@ -1376,7 +1376,6 @@ a:hover, a:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding-bottom: 60px;
   }
 }
 
@@ -1653,6 +1652,11 @@ a:hover, a:focus {
   }
 }
 
+.workers img {
+  display: block;
+  width: 100%;
+}
+
 .title.name {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -1697,7 +1701,6 @@ a:hover, a:focus {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-bottom: 24px;
   }
 }
 
