--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -47,6 +47,7 @@
 //     margin-right: 0;
 //   }
 // }
+
 .pictures-team {
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
@@ -96,10 +97,11 @@
     }
   }
 }
-// .workers > img {
-//   margin-bottom: 30px;
-//   display: block;
-
+.workers img {
+  // margin-bottom: 30px;
+  display: block;
+  width: 100%;
+}
 //   @media screen and (min-width: $mobile) {
 //     width: 450px;
 //     height: 460px;
@@ -148,7 +150,6 @@
     padding: 0;
     display: flex;
     justify-content: center;
-    margin-bottom: 24px;
   }
 
   @media screen and (min-width: $tablet) {
