--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -88,7 +88,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 60px;
+    margin-bottom: 60px;
   }
 
   @media screen and (min-width: $tablet) and (max-width: 1199px) {
@@ -163,7 +163,7 @@
 
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -8px;
 
   display: block;
   width: 100%;
@@ -237,7 +237,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 60px;
   }
 
   & .link {
